# matrix-dirwatch-bot

./: .gitlab-ci.yml  .travis.yml  README.md  default.nix  dockerimage.nix  matrix-dirwatch.cabal
app/: Main.hs
docs/: matrix-dirwatch.service  matrix-dirwatch.sh
src/GMB/Dirwatch/: Conversion.hs  INotify.hs  ProgramOptions.hs
src/Web/Matrix/Dirwatch/: API.hs  ConfigOptions.hs  Conversion.hs  INotify.hs  ProgramOptions.hs
test/: Spec.hs
