name:                matrix-dirwatch
version:             0.1.0.0
synopsis:            Watch directory changes and post them to a Matrix channel
description:         Watch directory changes and post them to a Matrix channel
homepage:            https://gitlab.plapadoo.de/plapadoo/matrix-dirwatch
license:             BSD3
license-file:        LICENSE
author:              plapadoo UG (haftungsbeschränkt)
maintainer:          middendorf@plapadoo.de
copyright:           2017 plapadoo UG (haftungsbeschränkt)
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Matrix.Dirwatch.ProgramOptions
                     , Web.Matrix.Dirwatch.Conversion
                     , Web.Matrix.Dirwatch.ConfigOptions
                     , Web.Matrix.Dirwatch.INotify
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , monad-loops
                     , stm
                     , dhall
                     , directory
                     , lucid
                     , filepath
                     , matrix-bot-api
                     , hinotify
                     , text
                     , lens
                     , optparse-text
                     , text-format
                     , plpd-utils
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings
  ghc-options: -Wall

executable matrix-dirwatch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , matrix-dirwatch
                     , text
                     , lens
                     , matrix-bot-api
  default-extensions: NoImplicitPrelude, OverloadedStrings
  ghc-options: -Wall

test-suite matrix-dirwatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matrix-dirwatch
                     , HUnit
                     , filepath
                     , matrix-bot-api
                     , text
                     , plpd-utils
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude, OverloadedStrings
  ghc-options: -Wall
  default-language:    Haskell2010
